@@ -1,2 +1,6 @@
 # Server-in-Java
 Client-server architecture
+
+podesiti: Run -> Edit Configurations -> VM options : --module-path %PATH_TO_FX% --add-modules javafx.controls,javafx.fxml --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+    
+
